--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port = 8081
+
+# Para cambiar el formato de la fecha de la consola
+logging.pattern.dateformat=hh:mm
+
+# Para eliminar el banner de spring
+spring.main.banner-mode=off
+
+# Para eliminar el uso del Caché en tiempo de desarrollo, en produccion debe ser true
+spring.thymeleaf.cache=false
+
