--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.1.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/> 
     </parent>
-    <groupId>com.TiendaIIQM</groupId>
-    <artifactId>TiendaIIQM</artifactId>
+    <groupId>com.Tienda</groupId>
+    <artifactId>Tienda</artifactId>
     <version>1</version>
-    <name>TiendaIIQM</name>
-    <description>Demo project for Spring Boot</description>
+    <name>Tienda</name>
+    <description>Proyecto hecho en clase web</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -80,7 +80,7 @@
             <groupId>com.google.firebase</groupId>
             <artifactId>firebase-admin</artifactId>
             <version>9.1.1</version>
-        </dependency>  
+        </dependency> 
     </dependencies>
 
     <build>
