--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 server.port = 8081
-
-# Para cambiar el formato de la fecha de la consola
+#para cambiar el formato de la fecha y hora
 logging.pattern.dateformat=hh:mm
-
-# Para eliminar el banner de spring
+#para eliminar el banner de spring
 spring.main.banner-mode=off
-
-# Para eliminar el uso del Caché en tiempo de desarrollo, en produccion debe ser true
+#para eliminar el uso de cache en tiempo de desarrollo,debe ser true
 spring.thymeleaf.cache=false
 
 #MySql conexion
